Fix fresh token & add paging for thread